[DLAB-939]: billing grid align fixes for firefox

--- a/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reporting/reporting-grid/reporting-grid.component.scss
@@ -25,6 +25,7 @@
   width: 100%;
   min-width: 1100px;
   overflow: auto;
+  border-collapse: inherit;
 
   .mat-cell {
     vertical-align: middle;
